# cutrialdive

./: CMakeLists.txt  LICENSE_addendum  Makefile  README.md  autotests.hpp  bench.sh  builtin_number_sequences.hpp  cutrialdiv.cu  gw_utility.c  gw_utility.h  hgint.hpp  main.cpp  makefile  makefile_cu  mode.cpp  modular_arithmetic_detail.cpp  modular_arithmetic_detail.hpp  prp.cpp  reciprocal.cpp  reciprocal.hpp  siever.hpp  smarandache.cpp  smarandache.hpp  timer.hpp  trial_div2.cu
.github/workflows/: build-and-test-cpu.yml  build-gpu.yml
src/: autotests.cpp  autotests.cu  autotests.hpp  barrett_mu_types.hpp  barrett_reciprocals.hpp  builtin_number_sequences.hpp  checkpoint.cpp  checkpoint.hpp  command_line.cpp  command_line.hpp  common_defines.h  cutrialdiv.cu  device_factors_buffer.hpp  device_memory.hpp  device_span.hpp  device_vector.hpp  factor.hpp  factoring_results.hpp  factors_buffer.hpp  gw_utility.c  gw_utility.h  hgint.hpp  hgint_arith.cpp  hgint_arith.hpp  lazy_init_array.hpp  logger.cpp  logger.hpp  main.cpp  mod_arith.hpp  mode.hpp  mode_flag.hpp  modular_arithmetic_detail.cpp  modular_arithmetic_detail.hpp  num_seq_dispatch.hpp  num_seq_id.cpp  num_seq_id.hpp  num_seq_spec.hpp  number_sequence.cpp  number_sequence.hpp  number_sequence_detail.hpp  (+23 more)
src/number_sequences/: fibonacci.cpp  fibonacci.hpp  lucas.cpp  lucas.hpp  mersenne.hpp  proth.cpp  proth.hpp  riesel_proth.hpp  riesel_proth_fixed_n.hpp  smarandache.cpp  smarandache.hpp  smarandache_base_2.cpp  smarandache_base_2.hpp  smarandache_base_3.cpp  smarandache_base_3.hpp  tribonacci.cpp  tribonacci.hpp
tests/: CMakeLists.txt  checkpointing_tests.cpp  fibonacci_tests.cpp  filesystem_helper.cpp  filesystem_helper.hpp  lucas_tests.cpp  mersenne_tests.cpp  peano.hpp  proth_tests.cpp  riesel_tests.cpp  smarandache_gp_tests.cpp  smarandache_tests.cpp  test_modular.cpp  test_modular.gp  tf.cpp  tf.cu  tf.hpp  tf_tests.cpp  tribonacci_tests.cpp
